<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chat_activity_to_map"
        android:title="@string/chat_activity_to_map"
        android:icon="@drawable/to_map"
        app:showAsAction="always" />
    <item
        android:id="@+id/chat_add_user"
        app:showAsAction="always"
        android:title="@string/add_user_to_chat"
        android:icon="@drawable/man"/>
    <item
        android:id="@+id/chat_rename"
        app:showAsAction="never"
        android:title="@string/menu_rename_chat" />
    <item
        android:id="@+id/show_list_of_members"
        app:showAsAction="never"
        android:title="@string/show_list_of_members"
        />
    <item
        android:id="@+id/exit_chat"
        app:showAsAction="never"
        android:title="@string/menu_exit_chat" />
</menu>