<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rename_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.chatandfind.android.RenameChatActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_chat"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/rename_chat_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/rename_chat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_chat_button"/>

    <TextView
        android:id="@+id/rename_chat_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/rename_chat_error"
        android:textColor="#f00"
        android:textSize="17sp"/>


</LinearLayout>
